Project 7: Stack Overflow & Indeed API Draft 3: Exception Handling for Config File

--- a/project7/config.json
+++ b/project7/config.json
@@ -1,1 +1,6 @@
-{"location": "New York, NY", "job_limit": 10, "sample_size": 100, "topic_limit": 5}
+{
+	"location" : "State College, PA",
+	"job_limit" : 10,
+	"sample_size" : 100,
+	"topic_limit" : 5
+}
